--- a/wiinote-webpage/src/App.css
+++ b/wiinote-webpage/src/App.css
@@ -1,70 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.2em;
 }
 
 body {
-  margin: 0 20px;
-}
-
-#input-container {
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-#input-container label {
-  display: flex;
-}
-
-#input-container span {
-  padding-right: 5px;
-}
-
-#input-container input, #input-container select {
-  flex: 1;
-  font-size: .8rem;
-}
-
-#cover {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#cover > p {
-  font-size: 32px;
-}
-
-#notebar, #notebar-colors {
-  position: absolute;    
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  height: 100vh;
-}
-
-#notebar {
-  z-index: 1;
-}
-
-#notebar-colors {
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-  display: flex;
-  flex-direction: column;
-}
-
-#notebar-colors > div {
-  flex: 1;
-  background-color: dodgerblue;
+  margin: 20px 0 0 20px;
 }
